--- a/package.json
+++ b/package.json
@@ -1,15 +1,17 @@
 {
   "name": "sea-bubbies",
-  "homepage": "https://Albee89.GitHub.io/sea-bubbies/",
   "version": "0.1.0",
+  "homepage": " https://albee89.github.io/seaBubbies",
   "private": true,
   "dependencies": {
     "@testing-library/jest-dom": "^5.17.0",
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
+    "gh-pages": "^6.0.0",
     "package.json": "^2.0.1",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "react-router-dom": "^6.16.0",
     "react-scripts": "5.0.1",
     "web-vitals": "^2.1.4"
   },
